# substd

./: .gitignore  Cargo.toml  README.md  notes.txt
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  change-request.md  feature_request.md
docs/: index.html
notes/: Chakra.depend.txt  KernelBase.depend.txt  amd_comgr32.depend.txt  cryptoss.depend.txt  directml.depend.txt  mfc140u.depend.txt  msvcp140_2.depend.txt  notes.txt  vcruntime140d.depend.txt  vcruntime140d.dll.str.txt
src/: lib.rs
src/alloc/: alloc.rs
src/collections/: hashmap.rs  hashset.rs
src/convert/: asmut.rs  from.rs  into.rs  mod.rs
src/externs/windows/: consoleapi.rs  heapapi.rs  ioaccessapi.rs  kernel32.rs  sysenvapi.rs
src/hash/: hash.rs
src/mem/: mem.rs
src/panic/: panic.rs
src/ptr/: ptr.rs
src/sinks/: console.rs
src/streams/: _buffer.rs  bytes.rs  mod.rs  null.rs  stderr.rs  stdin.rs  stdout.rs  strings.rs
src/streams/channels/: console.rs
src/streams/channels/gpio/: led.rs
src/vec/: macros.rs  mod.rs  safe_impls.rs  structs.rs  traits.rs  unsafe_impls.rs  utils.rs
